<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg_shape">

    <LinearLayout
        android:id="@+id/dialog_content_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialog_copy"
            android:layout_marginTop="10dp"
            style="@style/textDialog"
            android:text="@string/operation_copy"/>
        <TextView
            android:id="@+id/dialog_paste"
            style="@style/textDialog"
            android:text="@string/operation_paste"/>
        <TextView
            android:id="@+id/dialog_rename"
            style="@style/textDialog"
            android:text="@string/operation_rename"/>
        <TextView
            android:id="@+id/dialog_delete"
            style="@style/textDialog"
            android:text="@string/operation_delete"/>
        <TextView
            android:id="@+id/dialog_move"
            style="@style/textDialog"
            android:text="@string/operation_move"/>
        <TextView
            android:id="@+id/dialog_send"
            style="@style/textDialog"
            android:text="@string/operation_send"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dialog_sort"
            style="@style/textDialog"
            android:text="@string/menu_item_sort"/>
        <TextView
            android:id="@+id/dialog_copy_path"
            style="@style/textDialog"
            android:text="@string/operation_copy_path"/>
        <TextView
            android:id="@+id/dialog_info"
            style="@style/textDialog"
            android:text="@string/operation_info"/>
        <TextView
            android:id="@+id/dialog_new_folder"
            style="@style/textDialog"
            android:text="@string/operation_create_folder"/>
        <TextView
            android:id="@+id/dialog_visibale_file"
            style="@style/textDialog"
            android:layout_marginBottom="18dp"
            android:text="@string/operation_show_sys"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_sort_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/dialog_sort_name"
            style="@style/textDialog"
            android:text="@string/menu_item_sort_name"/>
        <TextView
            android:id="@+id/dialog_sort_size"
            style="@style/textDialog"
            android:layout_marginTop="5dp"
            android:text="@string/menu_item_sort_size"/>
        <TextView
            android:id="@+id/dialog_sort_time"
            style="@style/textDialog"
            android:layout_marginTop="5dp"
            android:text="@string/menu_item_sort_date"/>
        <TextView
            android:id="@+id/dialog_sort_type"
            style="@style/textDialog"
            android:layout_marginTop="5dp"
            android:text="@string/menu_item_sort_type"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

</FrameLayout>