<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/file_browse_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginLeft="50dp">
        <ListView
            android:id="@+id/file_path_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:headerDividersEnabled="true"
            android:footerDividersEnabled="true"
            android:fastScrollEnabled="true"/>
        <LinearLayout
            android:id="@+id/empty_view"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:visibility="gone">
            <ImageView
                android:src="@drawable/empty_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_file"
                android:textSize="27px"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sd_not_available_page"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:visibility="gone">
            <ImageView
                android:src="@drawable/sd_not_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25px" />

            <TextView
                android:text="@string/enable_sd_card"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="22px"
                android:gravity="center" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/moving_operation_bar"
        android:visibility="gone"
        style="@style/BottomButtonBar">

        <Button
            android:id="@+id/button_moving_confirm"
            style="@style/BottomButton.Left"
            android:text="@string/operation_paste" />

        <Button
            android:id="@+id/button_moving_cancel"
            style="@style/BottomButton.Right"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pick_operation_bar"
        android:visibility="gone"
        style="@style/BottomButtonBar">

        <Button
            android:id="@+id/button_pick_confirm"
            style="@style/BottomButton.Left"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/button_pick_cancel"
            style="@style/BottomButton.Right"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/operation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/operation_bar_bg">
        <TextView
            android:id="@+id/button_operation_delete"
            android:text="@string/operation_delete"
            android:drawableTop="@drawable/operation_button_delete"
            style="@style/FileViewOperationButtonStytle" />
        <TextView
            android:id="@+id/button_operation_copy"
            android:drawableTop="@drawable/operation_button_copy"
            android:text="@string/operation_copy"
            style="@style/FileViewOperationButtonStytle" />
        <TextView
            android:id="@+id/button_operation_move"
            android:drawableTop="@drawable/operation_button_move"
            android:text="@string/operation_move"
            style="@style/FileViewOperationButtonStytle" />
        <TextView
            android:id="@+id/button_operation_send"
            android:drawableTop="@drawable/operation_button_send"
            android:text="@string/operation_send"
            style="@style/FileViewOperationButtonStytle" />
        <TextView
            android:id="@+id/button_operation_cancel"
            android:drawableTop="@drawable/operation_button_cancel"
            android:text="@string/operation_cancel"
            style="@style/FileViewOperationButtonStytle" />
    </LinearLayout>
    <!-- path -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6"/>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
        <TextView
            android:id="@+id/current_path_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:singleLine="true"
            android:textSize="20sp"
            style="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    <!-- end path -->
</LinearLayout>
