<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_about_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/iv_back"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_about"
            android:textSize="@dimen/text16"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#E9E9E9"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/folder"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_app_name"
                android:textSize="@dimen/text23"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text14"
            android:text="@string/text_theme"
            android:textColor="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text14"
            android:text="@string/text_version"
            android:textColor="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/about_shape">
            <TextView
                android:id="@+id/tv_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_public"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="8dp"
                android:textSize="@dimen/text14"
                android:textColor="@android:color/holo_orange_dark"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#E6E6E6" />
            <TextView
                android:id="@+id/tv_discuss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/text_discuss"
                android:textSize="@dimen/text14"
                android:textColor="@android:color/holo_orange_dark"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text14"
            android:layout_marginTop="180dp"
            android:text="@string/text_address"
            android:textColor="@android:color/darker_gray"/>
    </LinearLayout>

</LinearLayout>